--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ body {
 
 /* 英雄区域样式 */
 .hero {
+    position: relative;
     height: 100vh; /* 全屏高度 */
     display: flex;
     align-items: center;
@@ -190,4 +191,18 @@ footer {
     .nav-links li:last-child a {
         border-bottom: none;
     }
+}
+
+#heroCanvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2;
 } 
