优化翻译，移动端适配

--- a/css/github.css
+++ b/css/github.css
@@ -31,12 +31,11 @@
 
 /* 头像样式优化 */
 .profile-avatar {
-    flex: 0 0 120px;
-    height: 120px;
-    border-radius: 50%;
+    width: 150px;
+    height: 150px;
     overflow: hidden;
-    border: 3px solid var(--primary-color);
-    box-shadow: 0 0 20px rgba(108, 99, 255, 0.3);
+    border-radius: 50%;
+    margin-right: 20px;
 }
 
 .profile-avatar img {
@@ -184,8 +183,9 @@
     }
 
     .profile-avatar {
-        flex: 0 0 100px;
+        width: 100px;
         height: 100px;
+        margin: 0 auto 15px;
     }
 
     .profile-info h1 {
